--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 
 mid-project/chord-part-1/chord/src/rpclib/
+mid-project/chord-part-3/Weber/6mbfile.txt
+mid-project/chord-part-3/Weber/chunks/6mbfile.txt-part1
+mid-project/chord-part-3/Weber/chunks/6mbfile.txt-part2
